--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -67,7 +67,9 @@
       "label": "Подавая заявку, вы соглашаетесь с обработкой ваших личных данных",
       "error": "Вы должны согласиться перед отправкой"
     },
-    "submit": "Отправлять"
+    "submit": "Отправить",
+    "submitting": "Отправляется..",
+    "submit_success": "Ваш запрос успешно отправлен!"
   },
   "emails": {
     "support": "support@ogem.uk"
